# cati-env

./: .gitignore  README.md  activate.sh  pixi.toml  pyproject.toml
conf/: bv_maker.cfg  publication.json  soma-env.json
conf/sources.d/: cati-env.json  soma-env.json
soma_dev/: __init__.py  cli.py  defaults.py  plan.py  recipes.py
soma_env/: __init__.py  cli.py  plan.py  recipes.py
