[project]
name = "soma-dev"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CeCILL-B"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "soma_dev.__version__"}

[project.urls]
repository = "https://github.com/brainvisa/soma-dev"


[project.scripts]
soma-dev = "soma_dev.cli:main"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "*"
fire = "*"

[tool.pixi.pypi-dependencies]
soma_dev = { path = ".", editable = true }
