[project]
name = "soma-env"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CeCILL-B"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "soma_dev.__version__"}

[project.urls]
repository = "https://github.com/brainvisa/soma-env"


[project.scripts]
soma-env = "soma_dev.cli:main"

[tool.setuptools]
packages=["soma_dev"]

[tool.pixi.project]
channels = ["conda-forge", "https://brainvisa.info/neuro-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
fire = "*"
python = "*"

# Dependencies for brainvisa-cmake
pyyaml = "*"
dateutils = "*"
cmake = "*"
gcc = "*"
git = "*"
gitpython = "*"
gxx = "*"
libglu = "*"
libglvnd-devel-cos7-x86_64 = "*"
libstdcxx-devel_linux-64 = "*"
make = "*"
mesa-libgl-devel-cos7-x86_64 = "*"
mesalib-devel-only = "*"
pip = "*"
pyaml = "*"
pytest = "*"
rattler-build = ">=0.13"
six = "*"
sphinx = "*"
toml = "*"
virtualgl = "*"

[tool.pixi.pypi-dependencies]
soma_dev = { path = ".", editable = true }

[tool.pixi.activation]
scripts = ["activate.sh"]
